<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_255sdp"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingStart="@dimen/_10sdp"
    android:paddingTop="@dimen/_16sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details1"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"/>



</LinearLayout>