<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".DeveloperActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/blue"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center_horizontal"
                android:orientation="vertical"
                android:outlineSpotShadowColor="@color/blue"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_6sdp">

                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|center_horizontal"
                    android:orientation="vertical"
                    android:padding="7dp">

                    <ImageView
                        android:id="@+id/backtohome"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:src="@drawable/arrow_back_24"
                        app:tint="@color/blue" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circleimageview2"
                        android:layout_width="@dimen/_125sdp"
                        android:layout_height="@dimen/_125sdp"
                        android:layout_gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/shaidul"
                        app:civ_border_color="@color/blue"
                        app:civ_border_overlay="true"
                        app:civ_border_width="@dimen/_2sdp"
                        app:civ_circle_background_color="@color/blue" />

                    <TextView
                        android:id="@+id/textview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/md_shaidul_islam"
                        android:textColor="#034D55"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/linear3"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/blue"
                        android:orientation="horizontal"
                        android:padding="8dp" />

                    <LinearLayout
                        android:id="@+id/linear4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="top|center_horizontal"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/britannia_university_cumilla"
                            android:textColor="#000000"
                            android:textSize="@dimen/_14ssp" />

                        <TextView
                            android:id="@+id/textview1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="Bsc in CSE"
                            android:textColor="#000000"
                            android:textSize="@dimen/_14ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="Software Engineer"
                            android:textColor="#000000"
                            android:textSize="@dimen/_14ssp" />

                        <LinearLayout
                            android:id="@+id/linear5"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="#ffffff"
                            android:orientation="horizontal"
                            android:padding="8dp" />


                        <LinearLayout
                            android:id="@+id/linear11"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@color/white"
                            android:orientation="horizontal"
                            android:padding="@dimen/_5sdp" />

                        <LinearLayout
                            android:id="@+id/linear8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="@dimen/_5sdp">

                            <ImageView
                                android:id="@+id/imageview_call"
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_margin="@dimen/_2sdp"
                                android:layout_weight="1"
                                android:scaleType="fitCenter"
                                android:src="@drawable/call_24" />

                            <ImageView
                                android:id="@+id/imageview_message"
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_margin="@dimen/_2sdp"
                                android:layout_weight="1"
                                android:scaleType="fitCenter"
                                android:src="@drawable/message_24" />

                            <ImageView
                                android:id="@+id/imageview_email"
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_margin="@dimen/_2sdp"
                                android:layout_weight="1"
                                android:scaleType="fitCenter"
                                android:src="@drawable/email_24" />

                            <ImageView
                                android:id="@+id/imageview_whatsapp"
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_margin="@dimen/_2sdp"
                                android:layout_weight="1"
                                android:scaleType="fitCenter"
                                android:src="@drawable/bxl_whatsapp" />


                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear12"
                        android:layout_width="match_parent"
                        android:layout_height="81dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="25dp"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageview3"
                            android:layout_width="@dimen/_55sdp"
                            android:layout_height="@dimen/_70sdp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/app_logo" />

                        <LinearLayout
                            android:id="@+id/linear13"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textview7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="Thanks You ��"
                                android:textColor="#000000"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/textview8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/rate_us"
                                android:textColor="#000000"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/buy_app_linlay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_1sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_marginVertical="@dimen/_4sdp"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_gravity="center"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:src="@drawable/shopping_cart" />

                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/buy_app"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_18ssp" />
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_270sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:layout_marginVertical="@dimen/_3sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:outlineSpotShadowColor="@color/blue"
                        app:cardCornerRadius="@dimen/_6sdp"
                        app:cardElevation="@dimen/_5sdp">



                        <LinearLayout
                            android:id="@+id/linear14"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_65sdp"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginVertical="@dimen/_10sdp"
                            android:background="@color/white"
                            android:gravity="left"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageview4"
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_margin="2dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/person_24"
                                app:tint="@color/blue" />

                            <LinearLayout
                                android:id="@+id/linear15"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textview9"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:padding="4dp"
                                    android:text="@string/developer_md_shaidul_islam"
                                    android:textColor="@color/blue"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textview10"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/_5sdp"
                                    android:text="@string/purches_txt"
                                    android:textAlignment="center"
                                    android:textColor="#000000"
                                    android:textSize="14sp" />
                            </LinearLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
